@@ -46,10 +46,26 @@ extern int dfsch_ascii_strcasecmp(char* a, char* b);
 
 extern pthread_mutex_t* dfsch_create_finalized_mutex();
 extern pthread_cond_t* dfsch_create_finalized_cvar();
+#ifdef PTHREAD_RWLOCK_INITIALIZER
 extern pthread_rwlock_t* dfsch_create_finalized_rwlock();
+#endif
 
 char* dfsch_vsaprintf(char* format, va_list ap);
 char* dfsch_saprintf(char* format, ...);
+
+#ifdef PTHREAD_RWLOCK_INITIALIZER
+#define DFSCH_RWLOCK_RDLOCK(l) pthread_rwlock_rdlock(l)
+#define DFSCH_RWLOCK_WRLOCK(l) pthread_rwlock_wrlock(l)
+#define DFSCH_RWLOCK_UNLOCK(l) pthread_rwlock_unlock(l)
+#define DFSCH_CREATE_RWLOCK dfsch_create_finalized_rwlock
+typedef pthread_rwlock_t dfsch_rwlock_t;
+#else
+#define DFSCH_RWLOCK_RDLOCK(l) pthread_mutex_lock(l)
+#define DFSCH_RWLOCK_WRLOCK(l) pthread_mutex_lock(l)
+#define DFSCH_RWLOCK_UNLOCK(l) pthread_mutex_unlock(l)
+#define DFSCH_CREATE_RWLOCK dfsch_create_finalized_mutex
+typedef pthread_mutex_t dfsch_rwlock_t;
+#endif
 
 
 
